--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,16 +1,15 @@
 # --- Basic options --- #
 
 # Name of website
-title: My website
+title: Sung Diagram
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: A diagram for helping you make decisions
 
 # Your name to show in the footer
-author: Some Person
+author: H. Bratterud, M. Burgess, B. T. Fasy, D. L. Millman, T. Oster, E. Sung
 
 # --- List of links in the navigation bar --- #
-
 navbar-links:
   About Me: "aboutme"
   Resources:
@@ -38,39 +37,19 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  rss: true
-#  reddit: yourname
-#  linkedin: daattali
-#  xing: yourname
-#  stackoverflow: "3943160/daattali"
-#  snapchat: deanat78
-#  instagram: deanat78
+  email: "david.millman@montana.edu"
+  github: "compTAG/sung-diagram"
 #  youtube: user/deanat78
-#  spotify: yourname
-#  telephone: +14159998888
-#  steam: deanat78
-#  twitch: yourname
-#  yelp: yourname
-#  telegram: yourname
-#  calendly: yourname
-#  mastodon: instance.url/@username
+  rss: false
 
 # --- General options --- #
 
 # Select which social network share links to show in posts
 share-links-active:
-  twitter: true
-  facebook: true
-  linkedin: true
-  vk: false
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+# url-pretty: ""
 
 # Create a "tags" index page and make tags on each post clickable
 link-tags: true
@@ -166,7 +145,7 @@ date_format: "%B %-d, %Y"
 # --- You don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
-timezone: "America/Vancouver"
+timezone: "America/Dener"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
