--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "paper"]
 	path = paper
 	url = https://git.overleaf.com/5e28f086c034a4000155fcc7
+[submodule "app"]
+	path = app
+	url = https://github.com/TostySSB/sungdiagram
