--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,7 +14,7 @@ navbar-links:
   # About Me: "aboutme"
   Resources:
     Paper: "/assets/pdf/sung-diagram.pdf"
-    Video: "https://www.youtube.com/embed/M44p1xcOC48"
+    Video: "https://www.youtube.com/embed/l67-uqcd9N0"
     App: "https://sungdiagram.herokuapp.com/"
   # Author's home: "https://deanattali.com"
 
