Add link to dgms 2020 site

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,6 +16,7 @@ navbar-links:
     Paper: "/assets/pdf/sung-diagram.pdf"
     Video: "https://www.youtube.com/embed/l67-uqcd9N0"
     App: "https://sungdiagram.herokuapp.com/"
+    Dgms20: "http://www.diagrams-conference.org/2020/index.php/program/posters/p7/"
   # Author's home: "https://deanattali.com"
 
 # --- Logo --- #
